# auto_shepherd_drone_control

./: .gitignore  CMakeLists.txt  README.md  package.xml  pixi.toml  setup.cfg  setup.py
bash/: rename_package.sh
src/ESP8266_gps/: SS_ESP8266.ino
src/map_publisher/: package.xml  setup.py
src/map_publisher/map_publisher/: map_publisher.py
src/map_publisher/maps/: ri109.yaml
src/uav_gps/: package.xml  setup.cfg  setup.py
src/uav_gps/uav_gps/: gps_receive_publish.py
src/uav_image/: CMakeLists.txt  package.xml
src/uav_image/src/: uav_image.cpp
